<resources>
    <string name="app_name">Food_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email_to_continue">enter your email</string>
    <string name="enter_your_password_to_continue">enter your password</string>
    <string name="login_to_account">Login to account</string>
    <string name="register">Register</string>
    <string name="enter_username">enter userName</string>
    <string name="home">Home</string>
    <string name="favourate">Favourate</string>
    <string name="profile">Profile</string>
    <string name="create_new_account">Create new account</string>
    <string name="today_s_best_meals">Today`s best meals</string>
    <string name="categories">Categories</string>
    <string name="what_would_you_like_to_neat_today">What would you like to \neat today?</string>
    <string name="favourite_items">Favourite Items</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">LogOut</string>
    <string name="your_user_name">Your User Name</string>
    <string name="your_email">your email</string>
    <string name="your_password">your password</string>
</resources>