<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="pvm"
            type="com.android.food_app.ui.profile.ProfileViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/base_baground"
        tools:context="com.android.food_app.ui.profile.UserProfileFragment">


        <TextView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="20sp"
            android:fontFamily="@font/akaya_telivigala"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/graydark"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="22dp"
            />

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="20sp"
            android:fontFamily="@font/akaya_telivigala"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/graydark"/>

            <ImageView
                android:id="@+id/profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/accoount"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/your_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_user_name"
                android:textColor="@color/graydark"
                app:layout_constraintTop_toBottomOf="@id/profile"
                app:layout_constraintStart_toStartOf="@id/profile"
                app:layout_constraintEnd_toEndOf="@id/profile"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/your_username"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="50dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/graydark"
                android:layout_marginStart="20dp"
                android:text="@string/your_email"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"/>

            <TextView
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/graydark"
                android:layout_marginStart="20dp"
                android:text="@string/your_password"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"/>
        </LinearLayout>








    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>