<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="rvm"
            type="com.android.food_app.ui.auth.register.RegisterViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.login.LoginActivity"
        android:background="@drawable/base_baground"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/image"
            android:scaleType="centerCrop"
            android:layout_marginTop="20dp"
            app:shapeAppearanceOverlay="@style/CircularImageShape"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/enter_username"
                android:error="@{rvm.userNameError}"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_shape"
                    android:text="@={rvm.userName}"
                    />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutregisteremail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/enter_your_email_to_continue"
                android:error="@{rvm.emailError}"
                app:startIconDrawable="@drawable/ic_email"

              >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_shape"
                    android:paddingStart="40dp"
                    android:text="@={rvm.email}"
                    />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutregisterpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:error="@{rvm.PassError}"
                android:hint="@string/enter_your_password_to_continue"
                app:startIconDrawable="@drawable/ic_pass"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:background="@drawable/button_shape"
                    android:text="@={rvm.pass}"
                    android:paddingStart="40dp"
                    />


            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BUTTON"
                android:padding="20dp"
                android:onClick="@{()->rvm.register()}"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/register"
                />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>